* io.c (rb_io_initialize): add autoclose argument to control close   at finalization.  [ruby-core:26222]
* io.c (rb_io_autoclose_p, rb_io_set_autoclose): new methods.


git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26999 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Sun Mar 21 19:52:27 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* io.c (rb_io_initialize): add autoclose argument to control close
+	  at finalization.  [ruby-core:26222]
+
+	* io.c (rb_io_autoclose_p, rb_io_set_autoclose): new methods.
+
 Sun Mar 21 19:50:04 2010  Tanaka Akira  <akr@fsij.org>
 
 	* ext/socket: make sources rdoc friendly.
