--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+Sun Mar 21 00:46:29 2010  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* lib/uri/common.rb (URI.encode_www_form_component):
+	  convert strings of HTML5 ASCII incompatible encoding
+	  to UTF-8.
+
+	* lib/uri/common.rb (URI.encode_www_form_component):
+	  "\x83\x41" of Shift_JIS should be encoded as "%83A".
+	  This follows real implementations.
+
+	* lib/uri/common.rb (URI.decode_www_form_component):
+	  use given encoding for force_encoding. [ruby-dev:40721]
+
 Sun Mar 21 21:09:17 2010  Tanaka Akira  <akr@fsij.org>
 
 	* lib/resolv-replace.rb: specify super class for rdoc.
