--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon Mar 22 00:50:33 2010  Tanaka Akira  <akr@fsij.org>
+
+	* ext/socket/rubysocket.h (rsock_revlookup_flag): declared.
+
 Mon Mar 22 00:01:24 2010  Alexander Zavorine  <alexandre.zavorine@nokia.com>
 
 	* symbian/setup (config.h): RUBY_EXEC_PREFIX defined.
