* ext/socket/.document: extracted from ext/.document.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@27006 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon Mar 22 09:06:10 2010  Tanaka Akira  <akr@fsij.org>
+
+	* ext/socket/.document: extracted from ext/.document.
+
 Mon Mar 22 00:50:33 2010  Tanaka Akira  <akr@fsij.org>
 
 	* ext/socket/rubysocket.h (rsock_revlookup_flag): declared.
