--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Mar 22 17:37:58 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* Makefile.in ({dist,real}clean-ext): fix for removing ext
+	  directories.
+
 Mon Mar 22 09:06:10 2010  Tanaka Akira  <akr@fsij.org>
 
 	* ext/socket/.document: extracted from ext/.document.
