--- a/NEWS
+++ b/NEWS
@@ -96,6 +96,11 @@ with all sufficient information, see the ChangeLog file.
     * New method:
       * MatchData#==
 
+  * Proc
+    * extended method:
+      * Proc#source_location returns location even if receiver is a method
+        defined by attr_reader / attr_writer / attr_accessor.
+
   * Process
     * extended methods:
       * Process.spawn accepts [:child, FD] for a redirect target.
