--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Mar 23 01:13:59 2010  Tanaka Akira  <akr@fsij.org>
+
+	* ext/socket: use rsock_ prefix for internal initialization functions.
+
 Mon Mar 22 20:32:22 2010  wanabe  <s.wanabe@gmail.com>
 
 	* proc.c (rb_method_location): return attr's location if it is setup.
