--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Wed Mar 24 10:18:12 2010  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* file.c (file_expand_path): set length of string before calling
+	  rb_enc_check because rb_enc_check scans its content.
+	  This prevents warnings by valgrind.
+
 Tue Mar 23 23:58:51 2010  James Edward Gray II  <jeg2@ruby-lang.org>
 
 	* lib/csv.rb: Incorporating the fixes from the recent
