* win32/win32.c (rb_w32_read): limit read size to 16KB if the file   seems to be console.  [ruby-core:28902]
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@27029 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Mar 24 14:33:56 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* win32/win32.c (rb_w32_read): limit read size to 16KB if the file
+	  seems to be console.  [ruby-core:28902]
+
 Wed Mar 24 10:18:12 2010  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* file.c (file_expand_path): set length of string before calling
