--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Mar 25 03:52:45 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* ext/iconv/charset_alias.rb: update of URL.  [ruby-dev:38360]
+
 Wed Mar 24 23:43:40 2010  Yusuke Endoh  <mame@tsg.ne.jp>
 
 	* thread.c (thread_create_core): let new thread inherit RUBY_EVENT_VM
