* tool/make-snapshot (package): $: no longer contains ".", in trunk.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@27035 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Mar 25 04:36:47 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* tool/make-snapshot (package): $: no longer contains ".", in trunk.
+
 Thu Mar 25 03:52:45 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* ext/iconv/charset_alias.rb: update of URL.  [ruby-dev:38360]
