* configure.in (ruby_version): needs runnable CPP.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@27038 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Mar 25 05:44:31 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* configure.in (ruby_version): needs runnable CPP.
+
 Thu Mar 25 04:42:19 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* tool/make-snapshot (package): take a breath for HP-UX make
