--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Mar 25 11:34:00 2010  Kenta Murata  <mrkn@mrkn.jp>
+
+	* test/ruby/test_dir_m17n.rb: HFS+ escapes invalid byte sequences of
+	  filenames.
+
 Thu Mar 25 05:44:31 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* configure.in (ruby_version): needs runnable CPP.
