* bignum.c, node.h, strftime.c, enc/trans/utf8_mac.trans: added explicit casts for supplessing warnings.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@27040 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 Thu Mar 25 11:34:00 2010  Kenta Murata  <mrkn@mrkn.jp>
 
+	* bignum.c, node.h, strftime.c, enc/trans/utf8_mac.trans:
+	  added explicit casts for supplessing warnings.
+
+Thu Mar 25 11:34:00 2010  Kenta Murata  <mrkn@mrkn.jp>
+
 	* test/ruby/test_dir_m17n.rb: HFS+ escapes invalid byte sequences of
 	  filenames.
 
