* NEWS: add Kernel#singleton_class.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@27041 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/NEWS
+++ b/NEWS
@@ -92,6 +92,10 @@ with all sufficient information, see the ChangeLog file.
       * IO::WaitWritable
         They are used to extend non-blocking exceptions.
 
+  * Kernel
+    * new method:
+      * Kernel#singleton_class
+
   * MatchData
     * New method:
       * MatchData#==
