--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Mar 25 12:37:37 2010  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>
+
+	* NEWS: add Kernel#singleton_class.
+
 Thu Mar 25 11:34:00 2010  Kenta Murata  <mrkn@mrkn.jp>
 
 	* bignum.c, node.h, strftime.c, enc/trans/utf8_mac.trans:
