--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Mar 25 14:50:00 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* win32/win32.c (rb_w32_{read,write}): fix handle leaks.  based on
+	  a patch from Heesob Park in [ruby-core:28919].  [ruby-core:28833]
+
 Thu Mar 25 12:37:37 2010  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>
 
 	* NEWS: add Kernel#singleton_class.
