* NEWS: Array#{uniq,uniq!} can take a block. see [ruby-dev:37998]
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@27044 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Mar 25 18:10:08 2010  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>
+
+	* NEWS: Array#{uniq,uniq!} can take a block. see [ruby-dev:37998]
+
 Thu Mar 25 17:21:49 2010  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>
 
 	* NEWS: add IO#autoclose=, IO#autoclose?, IO#codepoints,
