* thread.c (thread_reset_event_flags): set flags to thread.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@27046 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Mar 25 23:53:22 2010  wanabe  <s.wanabe@gmail.com>
+
+	* thread.c (thread_reset_event_flags): set flags to thread.
+
 Thu Mar 25 23:17:16 2010  Yusuke Endoh  <mame@tsg.ne.jp>
 
 	* file.c (rb_get_path_check): prefer #to_path over #to_str.  a patch
