* ext/tk/extconf.rb: fix [ruby-core:28901] [Bug #2997]. Thanks, Michael Graff. * ext/tk/tcltklib.c: use xfree() for memories allocated by ALLOC(). * ext/tk/tkutil/tkutil.c: ditto. * ext/tk/lib/tkextlib/version.rb: forgot updating.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@27055 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+Fri Mar 26 04:52:19 2010  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>
+
+	* ext/tk/extconf.rb: fix [ruby-core:28901] [Bug #2997].
+	  Thanks, Michael Graff.
+
+	* ext/tk/tcltklib.c: use xfree() for memories allocated by ALLOC().
+
+	* ext/tk/tkutil/tkutil.c: ditto.
+
+	* ext/tk/lib/tkextlib/version.rb: forgot updating.
+
 Thu Mar 25 23:53:22 2010  wanabe  <s.wanabe@gmail.com>
 
 	* thread.c (thread_reset_event_flags): set flags to thread.  [Bug #693]
