* lib/yaml/basenode.rb: deprecating YPath methods * lib/yaml/stream.rb: deprecating YAML::Stream#edit * test/yaml/test_yaml.rb: requiring yaml/ypath for tests.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@27058 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Fri Mar 26 12:36:10 2010  Aaron Patterson <aaron@tenderlovemaking.com>
+
+	* lib/yaml/basenode.rb: deprecating YPath methods
+
+	* lib/yaml/stream.rb: deprecating YAML::Stream#edit
+
 Fri Mar 26 12:29:28 2010  Aaron Patterson <aaron@tenderlovemaking.com>
 
 	* lib/yaml/encoding.rb: YAML.encode, YAML.decode are deprecated.
