--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,8 @@
 Fri Mar 26 22:58:10 2010  Yusuke Endoh  <mame@tsg.ne.jp>
 
 	* ext/openssl/ossl_x509store.c (ossl_x509store_initialize): initialize
-	  store->ex_data.sk.  [ruby-core:28907] [ruby-core:23971]
-	  [ruby-core:18121]
+	  store->ex_data.sk.  a patch from Christian Holtje in
+	  [ruby-core:28907].  [ruby-core:23971] [ruby-core:18121]
 
 Fri Mar 26 19:55:41 2010  Akinori MUSHA  <knu@iDaemons.org>
 
