* time.c (mul): condition refined.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@27071 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
-2010-03-27  Tanaka Akira  <akr@fsij.org>
+Sun Mar 28 07:12:41 2010  Tanaka Akira  <akr@fsij.org>
+
+	* time.c (mul): condition refined.
+
+Sun Mar 28 02:14:13 2010  Tanaka Akira  <akr@fsij.org>
 
 	* time.c: fix previos commit.
 
