* time.c (weq): optimize for small integer.   (wne): ditto.   (wlt): ditto.   (wgt): ditto.   (wle): ditto.   (wge): ditto.   (rb_time_magnify): ditto.   (rb_time_unmagnify): ditto.   (rb_time_unmagnify_to_float): new function to avoid rational for   Time#to_f and Time#-.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@27072 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+Sun Mar 28 08:20:37 2010  Tanaka Akira  <akr@fsij.org>
+
+	* time.c (weq): specialize for small integer.
+	  (wne): ditto.
+	  (wlt): ditto.
+	  (wgt): ditto.
+	  (wle): ditto.
+	  (wge): ditto.
+	  (rb_time_magnify): ditto.
+	  (rb_time_unmagnify): ditto.
+	  (rb_time_unmagnify_to_float): new function to avoid rational for
+	  Time#to_f and Time#-.
+
 Sun Mar 28 07:12:41 2010  Tanaka Akira  <akr@fsij.org>
 
 	* time.c (mul): condition refined.
