--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Mar 28 09:53:02 2010  Tanaka Akira  <akr@fsij.org>
+
+	* time.c: rename small integer specialization related identifiers.
+
 Sun Mar 28 08:20:37 2010  Tanaka Akira  <akr@fsij.org>
 
 	* time.c (weq): specialize for small integer.
@@ -17,7 +21,7 @@ Sun Mar 28 07:12:41 2010  Tanaka Akira  <akr@fsij.org>
 
 Sun Mar 28 02:14:13 2010  Tanaka Akira  <akr@fsij.org>
 
-	* time.c: fix previos commit.
+	* time.c: fix previous commit.
 
 Sat Mar 27 23:17:52 2010  Tanaka Akira  <akr@fsij.org>
 
@@ -101,7 +105,7 @@ Thu Mar 25 12:37:37 2010  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>
 Thu Mar 25 11:34:00 2010  Kenta Murata  <mrkn@mrkn.jp>
 
 	* bignum.c, node.h, strftime.c, enc/trans/utf8_mac.trans:
-	  added explicit casts for supplessing warnings.
+	  added explicit casts for suppressing warnings.
 
 Thu Mar 25 11:34:00 2010  Kenta Murata  <mrkn@mrkn.jp>
 
