--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Mar 28 09:28:33 2010  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* lib/scanf.rb: fix %[egEFG] isn't accept.
+
 Sun Mar 28 09:53:02 2010  Tanaka Akira  <akr@fsij.org>
 
 	* time.c: rename small integer specialization related identifiers.
