--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Mar 28 10:12:28 2010  Tanaka Akira  <akr@fsij.org>
+
+	* time.c (rb_time_magnify): fix for LP64.
+
 Sun Mar 28 09:28:33 2010  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* lib/scanf.rb: fix %[egEFG] isn't accept.
