--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sun Mar 28 10:35:45 2010  Ryan Davis  <ryand-ruby@zenspider.com>
+
+	* lib/minitest/*.rb: Imported minitest 1.6.0 r5717.
+	* test/minitest/*.rb: ditto.
+
 Sun Mar 28 10:12:28 2010  Tanaka Akira  <akr@fsij.org>
 
 	* time.c (rb_time_magnify): fix for LP64.
