* configure.in (ac_cv_func_snprintf, ac_cv_func_vsnprintf):   use own vsnprintf to avoid locale problems and platform   difference.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@27078 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Sun Mar 28 21:04:21 2010  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* configure.in (ac_cv_func_snprintf, ac_cv_func_vsnprintf):
+	  use own vsnprintf to avoid locale problems and platform
+	  difference.
+
 Sun Mar 28 10:03:51 2010  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* lib/scanf.rb: fix max width modifier for %f.
