* ext/psych/*: importing Psych to trunk * test/psych/*: ditto * lib/psych/*: ditto
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@27079 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Mon Mar 29 06:47:25 2010  Aaron Patterson <aaron@tenderlovemaking.com>
+
+	* ext/psych/*: importing Psych to trunk
+	* test/psych/*: ditto
+	* lib/psych/*: ditto
+
 Sun Mar 28 21:04:21 2010  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* configure.in (ac_cv_func_snprintf, ac_cv_func_vsnprintf):
