* random.c: change include order; ruby.h should be at first.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@27082 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon Mar 29 09:16:45 2010  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* random.c: change include order; ruby.h should be at first.
+
 Mon Mar 29 06:47:25 2010  Aaron Patterson <aaron@tenderlovemaking.com>
 
 	* ext/psych/*: importing Psych to trunk
