* lib/tempfile.rb (Tempfile#open): re-open with same mode and   options as initialize.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@27086 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Mar 29 15:10:39 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/tempfile.rb (Tempfile#open): re-open with same mode and
+	  options as initialize.
+
 Mon Mar 29 09:16:45 2010  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* random.c: change include order; ruby.h should be at first.
