--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon Mar 29 19:45:09 2010  Tanaka Akira  <akr@fsij.org>
+
+	* time.c: wide value condition changed.
+
 Mon Mar 29 18:10:03 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* lib/optparse.rb (Numeric): accept rationals.
