--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Mar 29 20:23:05 2010  Keiju Ishitsuka  <keiju@ruby-lang.org>
+
+	* lib/matrix.rb(Vector#each2, Vector#collect2): add type check for
+	Integer[Bug #2495].
+
 Mon Mar 29 19:45:09 2010  Tanaka Akira  <akr@fsij.org>
 
 	* time.c: wide value condition changed.
