* prelude.rb, .document: Stuff in prelude.rb should be documented   as well.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@27092 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Mar 29 21:47:44 2010  Akinori MUSHA  <knu@iDaemons.org>
+
+	* prelude.rb, .document: Stuff in prelude.rb should be documented
+	  as well.
+
 Mon Mar 29 20:23:05 2010  Keiju Ishitsuka  <keiju@ruby-lang.org>
 
 	* lib/matrix.rb(Vector#each2, Vector#collect2): add type check for
