--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Mar 30 03:56:13 2010  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* ext/psych/{emitter,parser,psych}.c: move variable
+	  declaration to the first of the block.
+
 Mon Mar 29 21:47:44 2010  Akinori MUSHA  <knu@iDaemons.org>
 
 	* prelude.rb, .document: Stuff in prelude.rb should be documented
