* lib/psych.rb: Fix problem with empty and white-space only strings.   Thanks Peter McLain! * test/psych/test_psych.rb: tests for change.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@27099 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Tue Mar 30 08:10:59 2010  Aaron Patterson <aaron@tenderlovemaking.com>
+
+	* lib/psych.rb: Fix problem with empty and white-space only strings.
+	  Thanks Peter McLain!
+	* test/psych/test_psych.rb: tests for change.
+
 Tue Mar 30 05:31:39 2010  Aaron Patterson <aaron@tenderlovemaking.com>
 
 	* lib/psych.rb: documentation updates.  Thanks Peter McLain!
