* ext/psych/extconf.rb: Making library detection more agnostic.   [ruby-core:29118]
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@27100 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Mar 30 08:55:50 2010  Aaron Patterson <aaron@tenderlovemaking.com>
+
+	* ext/psych/extconf.rb: Making library detection more agnostic.
+
 Tue Mar 30 08:10:59 2010  Aaron Patterson <aaron@tenderlovemaking.com>
 
 	* lib/psych.rb: Fix problem with empty and white-space only strings.
