--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Mar 30 13:01:10 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* tool/file2lastrev.rb (VCS#get_revisions): particular commands do
+	  not depend on instance.
+
 Tue Mar 30 08:55:50 2010  Aaron Patterson <aaron@tenderlovemaking.com>
 
 	* ext/psych/extconf.rb: Making library detection more agnostic.
