--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Tue Mar 30 13:57:08 2010  Akinori MUSHA  <knu@iDaemons.org>
+
+	* process.c (proc_daemon): Process.daemon should raise an error on
+	  failure regardless of whether the implementation uses daemon(3)
+	  or not. [ruby-dev:40832]
+
 Tue Mar 30 13:11:17 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* tool/file2lastrev.rb (VCS::GIT_SVN): removed because git-log can
