--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Tue Mar 30 18:25:52 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* file.c (rb_file_dirname): split from rb_file_s_dirname.
+
+	* load.c (rb_f_require_relative): use absolute path instead of
+	  expanded path.
+
 Tue Mar 30 13:57:08 2010  Akinori MUSHA  <knu@iDaemons.org>
 
 	* process.c (proc_daemon): Process.daemon should raise an error on
