--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Mar 30 19:46:00 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* ext/psych/lib: moved external library dependent files from lib.
+	  [ruby-core:29129]
+
 Tue Mar 30 18:25:52 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* file.c (rb_file_dirname): split from rb_file_s_dirname.
