--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Tue Mar 30 21:18:32 2010  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* ext/psych/extconf.rb: install psych .so to not psych/ but direct.
+	  This prepends to install *.rb files to psych/psych.
+
+	* ext/psych/lib/psych.rb: require 'psych.so'.
+
 Tue Mar 30 20:55:14 2010  Tanaka Akira  <akr@fsij.org>
 
 	* time.c (w2v): renamed from w2xv.
