* time.c: make wide value more polymorphic.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@27116 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Mar 30 21:56:33 2010  Tanaka Akira  <akr@fsij.org>
+
+	* time.c: make wide value more polymorphic.
+
 Tue Mar 30 21:18:32 2010  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* ext/psych/extconf.rb: install psych .so to not psych/ but direct.
