--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Mar 30 22:07:12 2010  Tanaka Akira  <akr@fsij.org>
+
+	* time.c: reorder wide value implementation.
+
 Tue Mar 30 22:00:44 2010  Keiju Ishitsuka  <keiju@ruby-lang.org>
 
 	* lib/irb.rb: suppoort [Feature#988], [ruby-core:21177].
