--- a/ChangeLog
+++ b/ChangeLog
@@ -817,7 +817,7 @@ Fri Mar 12 07:15:08 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 	* ruby.c (ruby_init_loadpath_safe, ruby_init_gems): set and remove
 	  TMP_RUBY_PREFIX.
 
-	* variable.c (rb_mod_remove_const): new function.
+	* variable.c (rb_const_remove): new function.
 
 	* tool/compile_prelude.rb: split each preludes.
 
