* NEWS: add URI.decode and URI.encode to Obsoleted methods,   and fix typos. [ruby-dev:40852]
* NEWS: add Time#subsec.

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@27120 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/NEWS
+++ b/NEWS
@@ -136,6 +136,7 @@ with all sufficient information, see the ChangeLog file.
 
     * new method:
       * Time#to_r
+      * Time#subsec
       * Time#round
 
     * incompatible changes:
@@ -315,8 +316,10 @@ with all sufficient information, see the ChangeLog file.
     * URI.encode_www_form_component
     * URI.decode_www_form_component
   * Obsoleted methods:
-    * URI#escape
-    * URI#unescape
+    * URI.decode
+    * URI.encode
+    * URI.escape
+    * URI.unescape
 
 * etc
   * new methods:
