--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Tue Mar 30 22:12:38 2010  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>
+
+	* NEWS: add URI.decode and URI.encode to Obsoleted methods,
+	  and fix typos. [ruby-dev:40852]
+
+	* NEWS: add Time#subsec.
+
 Tue Mar 30 22:07:12 2010  Tanaka Akira  <akr@fsij.org>
 
 	* time.c: reorder wide value implementation.
