* time.c: use more polymorphic operations.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@27121 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Mar 30 22:24:19 2010  Tanaka Akira  <akr@fsij.org>
+
+	* time.c: use more polymorphic operations.
+
 Tue Mar 30 22:12:38 2010  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>
 
 	* NEWS: add URI.decode and URI.encode to Obsoleted methods,
