--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Wed Mar 31 00:32:19 2010  Tanaka Akira  <akr@fsij.org>
+
+	* time.c (wdivmod): renamed from wdivmodv.  fix neg/pos and pos/neg.
+	  (split_second): return number of seconds as wideval_t.
+	  (timet2wv): new function.
+	  (wv2timet): new function.
+	  (timet2wideval): removed.
+
 Tue Mar 30 22:24:19 2010  Tanaka Akira  <akr@fsij.org>
 
 	* time.c: use more polymorphic operations.
