* test/rake/test_{package_task,rules,task_manager}.rb: use   temporary directories.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@27127 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Mar 31 16:05:13 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* test/rake/test_{package_task,rules,task_manager}.rb: use
+	  temporary directories.
+
 Wed Mar 31 13:53:13 2010  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* test/rubygems/gemutilities.rb (setup, teardown):
