* time.c: less bignum allocations.
* strftime.c (rb_strftime_timespec): defined to avoid rational for
  nano second resolution time.



git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@27128 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Wed Mar 31 21:30:38 2010  Tanaka Akira  <akr@fsij.org>
+
+	* time.c: less bignum allocations.
+
+	* strftime.c (rb_strftime_timespec): defined to avoid rational for
+	  nano second resolution time.
+
 Wed Mar 31 16:05:13 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* test/rake/test_{package_task,rules,task_manager}.rb: use
