--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Mar 31 23:33:29 2010  Tanaka Akira  <akr@fsij.org>
+
+	* time.c (long_mul): extracted from mul and avoid integer overflow.
+	  (wi_mul): extracted from wmul and avoid integer overflow.
+
 Wed Mar 31 21:30:38 2010  Tanaka Akira  <akr@fsij.org>
 
 	* time.c: less bignum allocations.
