--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Apr  1 04:30:11 2010  Tanaka Akira  <akr@fsij.org>
+
+	* time.c (long_mul): overflow condition changed.
+	  (wi_mul): ditto.
+
 Wed Mar 31 23:33:29 2010  Tanaka Akira  <akr@fsij.org>
 
 	* time.c (long_mul): extracted from mul and avoid integer overflow.
