--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Apr  1 04:55:08 2010  Tanaka Akira  <akr@fsij.org>
+
+	* time.c (rb_big_abs_find_minbit): fix handling the last word.
+
 Thu Apr  1 04:30:11 2010  Tanaka Akira  <akr@fsij.org>
 
 	* time.c (long_mul): overflow condition changed.
