* io.c (rb_io_initialize): fixed a rdoc miss that textmode and   bimode flag explanation was reversed each other.  a patch from   Heesob Park in [ruby-core:29166].
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@27136 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Thu Apr  1 11:36:04 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* io.c (rb_io_initialize): fixed a rdoc miss that textmode and
+	  bimode flag explanation was reversed each other.  a patch from
+	  Heesob Park in [ruby-core:29166].
+
 Thu Apr  1 09:54:27 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* include/ruby/ruby.h (RUBY_{DEFAULT,NEVER}_FREE): added.
