--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Apr  1 13:20:50 2010  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* lib/scanf.rb: support %a format. [ruby-dev:40650]
+
 Thu Apr  1 12:04:10 2010  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* include/ruby/ruby.h (PRE_TIMET_PREFIX): define if configure doesn't
