--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Apr  1 14:30:16 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* enc/utf_16{be,le}.c (utf16{be,le}_mbc_to_code): simplified.
+
 Thu Apr  1 14:07:51 2010  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* util.c (BSD__hdtoa): don't use C99 macros. (FP_NORMAL etc)
