--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Apr  1 17:17:00 2010  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* enc/trans/iso2022.trans: CP50221 supports 8bit JIS.
+
 Thu Apr  1 16:44:00 2010  Eric Hodel  <drbrain@segment7.net>
 
 	* lib/rdoc, test/rdoc: Imported RDoc 2.5
