--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Apr  2 08:22:51 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* process.c (proc_daemon): use EXIT_SUCCESS instead of magic number.
+
 Fri Apr  2 07:00:28 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* ext/dl/cptr.c (rb_dlptr_inspect): fix format specifiers.
