--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Apr  2 12:52:25 2010  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* lib/rdoc/parser.rb (binary?): regression.
+
 Fri Apr  2 11:54:49 2010  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* win32/win32.c (init_env): wrong calculation of the head of setenv
