* lib/rdoc/ri/paths.rb (RDoc::HOMEDIR): expand_path deals with   platform dependent envirionments.  reapplied r21312.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@27177 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Apr  2 13:51:52 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/rdoc/ri/paths.rb (RDoc::HOMEDIR): expand_path deals with
+	  platform dependent envirionments.  reapplied r21312.
+
 Fri Apr  2 12:52:25 2010  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* lib/rdoc/parser.rb (binary?): regression.
