* lib/rdoc/ri/paths.rb (RDoc::RI::Paths): Gem::Enable has been   obsolete.  reapplied r24599.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@27179 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
-Fri Apr  2 13:57:08 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+Fri Apr  2 13:59:17 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/rdoc/ri/paths.rb (RDoc::RI::Paths): Gem::Enable has been
+	  obsolete.  reapplied r24599.
 
 	* lib/rdoc/ri/paths.rb: follows $ridir.  reapplied r23554.
 
